--- a/kovacs-alfred-bootstrap/index.html
+++ b/kovacs-alfred-bootstrap/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link rel="stylesheet" href="/kovacs-alfred-bootstrap/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/kovacs-alfred-bootstrap/css/style.css">
     <title>Bootstrap vizsga</title>
@@ -32,13 +33,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Download</a>
+                        <a href="#discover">Download</a>
                     </li>
                     <li>
-                        <a href="#">Features</a>
+                        <a href="#unlimited">Features</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +50,7 @@
     <section class="section-phone text-center">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-6 middle">
                     <p>
                         New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!
                     </p>
@@ -61,7 +62,7 @@
             </div>
         </div>
     </section>
-    <section class="section-download text-center">
+    <section id="discover" class="section-download text-center">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12">
@@ -81,7 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="section-unlimited text-center">
+    <section id="unlimited" class="section-unlimited text-center">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -141,14 +142,16 @@
             </div>
         </div>
     </section>
-    <section class="section-love">
+    <section id="contact" class="section-love text-center">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12">
                     <h1>We &#128420; new friends</h1>
                 </div>
                 <div class="col-xs-12 col-md-12">
-
+                    <a class="facebook" href="http://www.facebook.com">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -157,6 +160,7 @@
 
     <script src="/kovacs-alfred-bootstrap/js/jquery-3.1.1.min.js"></script>
     <script src="/kovacs-alfred-bootstrap/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/kovacs-alfred-bootstrap/js/main.js"></script>
 </body>
 
 </html>
